Fixed spacing in results grid

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -150,5 +150,5 @@ h5 {
 }
 p {
 	font-family: 'Open Sans', sans-serif;
-	font-size: 14px;
+	font-size: 12px;
 }
